cabal-version: 3.0
name: gen-sha256map
version: 0.1
synopsis: generate a haskell.nix sha256map from a cabal.project
-- description:
homepage: https://github.com/chessai/gen-sha256map
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: chessai
maintainer: chessai1996@gmail.com
-- copyright:
category: bruh
extra-source-files: CHANGELOG.md

flag dev
  description:
    Optimise for local development (disable performance optimisations, disable -Werror, add bounds checking, etc.)
  manual:
    False
  default:
    False

common ghc-config
  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Winvalid-haddock
    -Wno-partial-fields
  default-language:
    Haskell2010

library
  import: ghc-config
  exposed-modules:
    GenSha256Map
  -- other-modules:
  build-depends:
    , aeson
    , async
    , base
    , Cabal
    , bytestring
    , directory
    , filepath
    , cabal-install-parsers >= 0.4 && < 0.5
    , optparse-applicative
    , process
    , text
  hs-source-dirs: src

executable gen-sha256map
  import: ghc-config
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , base
    , gen-sha256map
